# bonsainet

./: pyproject.toml
bonsainet/: blocks.py  builder.py  configs.py  controllers.py  evaluate.py  groups.py  hooks.py  linalg.py  misc.py  optimizers.py  proximals.py  prune.py  sparsegpt.py  specs.py  stats.py
bonsainet/data/: __init__.py  cifar.py  datasets.py  llm.py  transforms.py
bonsainet/models/: layers.py  resnets.py  utils.py  wideresnet.py
bonsainet/optimizers/: adamhs.py  iht.py  mnist5.py  optimizers.py  sastra.py  sgd.py
bonsainet/pruners/: base.py  prune.py
bonsainet/train/: schedulers.py  sweep.py  utils.py
notebooks/: prune_llm.ipynb
scripts/: prune_llm.py
tests/: benchmark_attn.py  test_blocks.py  test_groups.py
